--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: .0;
+    padding: .0;
     box-sizing: border-box;
 
 }
@@ -37,7 +37,7 @@
 img {
 
     position: relative;
-    top: 20%;
+    top: 30%;
     right: 110PX;
   
 
